--- a/src/app/styles/layout.module.css
+++ b/src/app/styles/layout.module.css
@@ -205,7 +205,22 @@ Unlike in globals.css, the classes defined in layout.module.css are locally scop
   font-weight: 500;
   transition: background-color 0.2s;
 }
-
+.cancel_btn{
+   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  padding: 1rem;
+  background-color: var(--text-secondary);
+  color: white;
+  border-radius: 0.5rem;
+  border: none;
+  cursor: pointer;
+  font-size: 1.25em;
+  font-weight: 500;
+  transition: background-color 0.2s;
+}
 .submit_btn:hover:not(:disabled),
 .donate_btn:hover:not(:disabled) {
   background-color: #047857;
