clean : code + delete comments

--- a/src/app/connexion/page.module.css
+++ b/src/app/connexion/page.module.css
@@ -131,7 +131,7 @@
   cursor: not-allowed;
 }
 
-/* Manage volunteers button (Gérer les bénévoles) */
+/* bouton "gérer les bénévoles" */
 .manage_btn {
   width: 100%;
   display: flex;
